MImplememtación de UsuarioRequestDTO y correción de algunos bugs